avoid overflow

--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -1151,6 +1151,7 @@
 		max-width: 912px;
 		position: relative;
 		z-index: 1;
+		overflow-y: scroll;
 		@media screen and ( max-width: 782px ) {
 			margin: 40px 25px;
 		}
